--- a/css/common.css
+++ b/css/common.css
@@ -24,7 +24,8 @@ li{
 .message {
     font-size: 1rem;
     line-height: 2;
-    margin: 0 auto;
+    margin-left: 30px;
+    margin-right: 30px;
     text-align: justify;
 }
 .pre{
@@ -114,12 +115,12 @@ tbody tr {
 .scroll tbody::-webkit-scrollbar {
     width:2px;
     }
-  
+ 
 .scroll tbody::-webkit-scrollbar-track {
     -webkit-box-shadow:inset 0 0 6px rgba(0,0,0,0.3);
     border-radius:10px;
 }
-
+ 
 .scroll tbody::-webkit-scrollbar-thumb {
     border-radius:10px;
     background:rgba(255,255,255,0.5);
